package NRelevArtifacts;

enum EArtifactType { // simple type description, should not be too detaile
    AT_RANKING_FORMULA = 1;
    AT_EXPANSIONS = 2;
    AT_QUERY_DICT = 3;
    AT_URL_DICT = 4;
    AT_NN_MODEL = 5;
    AT_LEARN_POOL = 6;
}

enum EDepFetchPolicy {
    FP_LAST_CALCED = 1;
    FP_LAST_ACCEPTED = 2;
    FP_IN_PROD = 3;
}

enum ERuntimeSystem {
    RT_BEGEMOT = 1;
    RT_BEGEMOT_FRESH_DATA = 2;
    RT_BASESEARCH_MODELS = 3;
    RT_JUPITER_BASE = 4;
    RT_MMETA_MODELS = 5;
    RT_LB_KV_BASE = 6;
    RT_LB_KNN_BASE = 7;
};

enum ELogsType {
    LOG_SEARCH = 1;
}

message TDependencyDeclaration {
    optional string Artifact = 1;
    optional string ImportedArtifact = 7;
    optional string AgeSla = 2;

    // in terms "addition to Age / DesiredUpdateRate", multiplied in violation rate
    optional float SlaViolationPenalty = 3;

    optional ELogsType LogsType = 4;
    optional string LogsWindow = 5;

    optional EDepFetchPolicy FetchPolicy = 6;
    optional string SilentVersionDate = 8;
}

message TRelevArtifact {
    required string Name = 1;
    optional EArtifactType Type = 2;
    repeated ERuntimeSystem RuntimeSystem = 3;
    repeated string Responsible = 4;
    optional string Description = 5;
    optional string AcceptanceMetrica = 6;

    repeated TDependencyDeclaration DependsOn = 7;
    optional string ActualVersionCheckSystem = 8;
    optional float CurrentImplementationPenalty = 9;

    optional string FirstVersionDateTag = 10;
}


enum EInMetricaAccountType {
    ACCOUNT_TYPE_IN_PROD = 0;
    ACCOUNT_TYPE_CALCED = 1;
}

message TObsolescenceMetricaComponent {
    required string Artifact = 1;
    required float RelativeWeight = 2;
    optional EInMetricaAccountType AccountType = 3; //unimplemented
    optional string DesiredUpdateRate = 4;
    optional string AddedInMetricaDate = 5;
}

message TArtifactObsolescenceMetrica {
    required string MetricaName = 1;
    repeated TObsolescenceMetricaComponent Component = 2;
    repeated string Responsibles = 4;
}

message TRegistryFormat {
    repeated TRelevArtifact RelevArtifact = 1;
    repeated TArtifactObsolescenceMetrica ObsolescenceMetrica = 2;
}

message TRelevArtifactInstantionSimpleRef {
    required string Name = 1;
    required string ComputationStartTag = 2;
    optional string CustomNamePart = 3;
}

